# msgfleet-messages-service

./: README.md  pyproject.toml  tree.txt
alembic/: env.py
alembic/versions/: cf566dab0c37_.py
scripts/: dev.py
secrets/app/: .service-urls.env.dist
src/messages_service/: loader.py
src/messages_service/api/: router.py
src/messages_service/api/dto/: parameters.py  responses.py
src/messages_service/config/: settings.py
src/messages_service/domain/models/: models.py
src/messages_service/infrastructure/: logging.py
src/messages_service/infrastructure/db/: models.py  setup.py
src/messages_service/infrastructure/http/: clients.py
src/messages_service/services/dependencies/: db.py
src/messages_service/services/flows/: _flows.py
src/messages_service/services/flows/dto/: parameters.py  responses.py
src/messages_service/services/queries/: __init__.py
src/messages_service/services/queries/dto/parameters/: messages.py
src/messages_service/services/queries/dto/responses/: messages.py
src/messages_service/services/queries/queries/: messages.py
src/messages_service/utils/dto/: schemas.py
src/shared/auth/: __init__.py  dependencies.py  dto.py  settings.py  utils.py
